--- a/.vitepress/theme/theme.scss
+++ b/.vitepress/theme/theme.scss
@@ -14,6 +14,9 @@
     &:first-child {
       padding: 0 0 12px;
     }
+    &:last-child {
+      padding-bottom: 0;
+    }
     & + .VPMenuGroup {
       border-top: 1px solid var(--vp-c-border);
     }
